RR.SEBRAE.CLUSTER/traefik/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.2
          args:
            - --api.insecure
            - --providers.kubernetesingress
            - --entryPoints.websecure.address=:443
            - --entryPoints.websecure.tls=true
            - --entryPoints.websecure.tls.certResolver=default
            - --certificatesresolvers.default.acme.email=utic@rr.sebrae.com.br
            - --certificatesresolvers.default.acme.storage=acme.json
            - --certificatesresolvers.default.acme.tlsChallenge=true
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: dashboard
              containerPort: 8080
          volumeMounts:
            - name: ssl-secret
              mountPath: /certs
              readOnly: true
      volumes:
        - name: ssl-secret
          secret:
            secretName: ssl-sebrae
