RR.SEBRAE.CLUSTER/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  namespace: traefik

spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: dashboard
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: traefik

spec:
  type: LoadBalancer
  ports:
    - targetPort: web
      port: 80
  selector:
    app: traefik

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-websecure-service
  namespace: traefik
spec:
  type: LoadBalancer
  ports:
    - port: 443
      targetPort: websecure
  selector:
    app: traefik
