RR.SEBRAE.CLUSTER/traefik/services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: traefik
  name: traefik-dashboard-service

spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: dashboard
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  namespace: traefik
  name: traefik-web-service

spec:
  type: LoadBalancer
  ports:
    - targetPort: web
      port: 80
  selector:
    app: traefik

---
apiVersion: v1
kind: Service
metadata:
  namespace: traefik
  name: traefik-websecure-service

spec:
  type: LoadBalancer
  ports:
    - targetPort: websecure
      port: 443
  selector:
    app: traefik
