RR.SEBRAE.CLUSTER/traefik/teste-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: traefik
spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: whoami
