RR.SEBRAE.CLUSTER/traefik/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingressroute
  namespace: traefik
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`traefik-dashboard.rr.sebrae.com.br`)
    services:
    - kind: TraefikService
      name: api@internal
  tls:
    secretName: ssl-sebrae
