RR.SEBRAE.CLUSTER/traefik/teste-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutebar
  namespace: traefik

spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik-dashboard.rr.sebrae.com.br`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: traefik-dashboard-service
      namespace: traefik
